Fix line-height and logo overflow issues on tabs bar

--- a/app/styles/components/tabs-bar.scss
+++ b/app/styles/components/tabs-bar.scss
@@ -184,7 +184,7 @@
 
   > span {
     font-size: 15px;
-    line-height: 50px;
+    line-height: 20px;
     margin-left: 4px;
   }
 
@@ -266,7 +266,6 @@
     margin-right: 30px;
     border: 0;
     height: 40px;
-    overflow: hidden;
     padding: 13px 0 0;
     box-sizing: border-box;
     filter: brightness(0%) grayscale(100%) invert(100%);
